Fix z-index issue; nav menu should be on top of scroll nav

--- a/src/scss/components/nav/_nav.scss
+++ b/src/scss/components/nav/_nav.scss
@@ -33,7 +33,7 @@
     position: fixed;
     right: 0;
     top: 0;
-    z-index: 1001;
+    z-index: 1002;
   }
 }
 
